tests/snapshots/tui_snapshot_test__tui_snapshots__stream_list_empty.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 0 shown of 0    Autoscroll: on
 Capture filter (BPF): none
 View filter: none
  SSRC   Codec   Source Destina Pkts   Jitter  Loss   Duratio Dialog SDP   Statu

  No RTP streams yet.

  A stream appears here once RTP packets are seen.
  Tab returns to the call list.














Esc Back  F1 Help  Enter Detail  Tab Calls  F2 Save WAV  F7 Filter
