tests/snapshots/tui_snapshot_test__tui_snapshots__stream_list_with_streams.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 0 shown of 0    Autoscroll: on
 Capture filter (BPF): none
 View filter: none
  SSRC       Codec    Source                 Destination            Pkts     Jitter   Loss    Duration  Dialog       SDP   Status
> 0xAAAABBBB PCMU     10.0.0.1:20000         10.0.0.2:30000         1        0.0ms    0.0%    0s        call-1@test  -     OK
  0xCCCCDDDD PCMA     10.0.0.3:20002         10.0.0.4:30002         1        0.0ms    0.0%    0s        -            -     ORPHAN

















Esc Back  F1 Help  Enter Detail  Tab Calls  F2 Save WAV  F7 Filter
