tests/snapshots/tui_snapshot_test__tui_snapshots__talkers_view.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Current Mode: Online (any)    Dialogs: 3 (3 displayed)  [A]
 Match Expression:     BPF Filter:
 Display Filter:
┌ Top Talkers ─────────────────────────────────────────────────────────────────┐
│Top Talkers (by source IP)                                                    │
│                                                                              │
│#   Source IP                Dialogs     Msgs INVITEs Answered Failed         │
│1   10.0.0.1                       3        4       3        2      1         │
│2   10.0.0.2                       3        4       3        2      1         │
│                                                                              │
│2 distinct talker(s).                                                         │
│A participant is credited for every dialog it took part in, so shares overlap.│
│                                                                              │
│Press Esc to return.                                                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Esc Back
